# WebRascal2

./: .gitignore  Cargo.toml  README.md
crates/client-wasm/: Cargo.toml
crates/client-wasm/src/: lib.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
scripts/: build-wasm.ps1
web/: boot.js  index.html  sw.js
