[package]
name = "client-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
proxy-core = { path = "../proxy-core" }
url = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clients",
  "FetchEvent",
  "Headers",
  "Location",
  "MessageEvent",
  "Navigator",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "ServiceWorker",
  "Response",
  "ServiceWorkerContainer",
  "ServiceWorkerGlobalScope",
  "WorkerLocation",
  "Storage",
  "Window",
]
